# src/main/java/br/com/fiap/restauranteapi/infrastructure/adapters/inbound/rest/model/dto/UserDTO.java
@@ -1,147 +1,0 @@
-package br.com.fiap.restauranteapi.infrastructure.adapters.inbound.rest.model.dto;
-
-import br.com.fiap.restauranteapi.application.domain.user.UserType;
-
-import java.time.LocalDateTime;
-import java.util.Objects;
-import java.util.UUID;
-
-public class UserDTO {
-    private UUID userId;
-    private String name;
-    private String email;
-    private String login;
-    private String password;
-    private AddressDTO address;
-    private Boolean active;
-    private UserType userType;
-    private LocalDateTime createdAt;
-    private LocalDateTime updatedAt;
-    private LocalDateTime deletedAt;
-
-    public UserDTO(
-            UUID userId,
-            String name,
-            String email,
-            String login,
-            String password,
-            AddressDTO address,
-            Boolean active,
-            UserType userType,
-            LocalDateTime createdAt,
-            LocalDateTime updatedAt,
-            LocalDateTime deletedAt
-    ) {
-        this.userId = userId;
-        this.name = name;
-        this.email = email;
-        this.login = login;
-        this.password = password;
-        this.address = address;
-        this.active = active;
-        this.userType = userType;
-        this.createdAt = createdAt;
-        this.updatedAt = updatedAt;
-        this.deletedAt = deletedAt;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (o == null || getClass() != o.getClass()) return false;
-        UserDTO userDTO = (UserDTO) o;
-        return Objects.equals(userId, userDTO.userId);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hashCode(userId);
-    }
-
-    public UUID getUserId() {
-        return userId;
-    }
-
-    public void setUserId(UUID userId) {
-        this.userId = userId;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public String getEmail() {
-        return email;
-    }
-
-    public void setEmail(String email) {
-        this.email = email;
-    }
-
-    public String getLogin() {
-        return login;
-    }
-
-    public void setLogin(String login) {
-        this.login = login;
-    }
-
-    public String getPassword() {
-        return password;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
-    }
-
-    public AddressDTO getAddress() {
-        return address;
-    }
-
-    public void setAddress(AddressDTO address) {
-        this.address = address;
-    }
-
-    public Boolean getActive() {
-        return active;
-    }
-
-    public void setActive(Boolean active) {
-        this.active = active;
-    }
-
-    public LocalDateTime getCreatedAt() {
-        return createdAt;
-    }
-
-    public void setCreatedAt(LocalDateTime createdAt) {
-        this.createdAt = createdAt;
-    }
-
-    public LocalDateTime getUpdatedAt() {
-        return updatedAt;
-    }
-
-    public void setUpdatedAt(LocalDateTime updatedAt) {
-        this.updatedAt = updatedAt;
-    }
-
-    public LocalDateTime getDeletedAt() {
-        return deletedAt;
-    }
-
-    public void setDeletedAt(LocalDateTime deletedAt) {
-        this.deletedAt = deletedAt;
-    }
-
-    public UserType getUserType() {
-        return userType;
-    }
-
-    public void setUserType(UserType userType) {
-        this.userType = userType;
-    }
-}
