# src/main/java/br/com/fiap/restauranteapi/infrastructure/adapters/inbound/rest/model/dto/create/CreateAddressDTO.java
@@ -1,77 +1,0 @@
-package br.com.fiap.restauranteapi.infrastructure.adapters.inbound.rest.model.dto.create;
-
-import java.time.LocalDateTime;
-import java.util.UUID;
-
-public class CreateAddressDTO {
-    private String street;
-    private String number;
-    private String complement;
-    private String city;
-    private String state;
-    private String zipCode;
-
-    public CreateAddressDTO(
-            String street,
-            String number,
-            String complement,
-            String city,
-            String state,
-            String zipCode
-    ) {
-        this.street = street;
-        this.number = number;
-        this.complement = complement;
-        this.city = city;
-        this.state = state;
-        this.zipCode = zipCode;
-    }
-
-    public String getStreet() {
-        return street;
-    }
-
-    public void setStreet(String street) {
-        this.street = street;
-    }
-
-    public String getNumber() {
-        return number;
-    }
-
-    public void setNumber(String number) {
-        this.number = number;
-    }
-
-    public String getComplement() {
-        return complement;
-    }
-
-    public void setComplement(String complement) {
-        this.complement = complement;
-    }
-
-    public String getCity() {
-        return city;
-    }
-
-    public void setCity(String city) {
-        this.city = city;
-    }
-
-    public String getState() {
-        return state;
-    }
-
-    public void setState(String state) {
-        this.state = state;
-    }
-
-    public String getZipCode() {
-        return zipCode;
-    }
-
-    public void setZipCode(String zipCode) {
-        this.zipCode = zipCode;
-    }
-}
