# src/main/java/br/com/fiap/restauranteapi/infrastructure/adapters/inbound/rest/model/dto/update/UpdatePasswordDTO.java
@@ -1,6 +1,0 @@
-package br.com.fiap.restauranteapi.infrastructure.adapters.inbound.rest.model.dto.update;
-
-public record UpdatePasswordDTO(
-        String newPassword,
-        String oldPassword) {
-}
