# src/main/java/br/com/fiap/restauranteapi/infrastructure/adapters/inbound/rest/security/model/CustomUserDetails.java
@@ -1,41 +1,70 @@
 package br.com.fiap.restauranteapi.infrastructure.adapters.inbound.rest.security.model;
 
-import br.com.fiap.restauranteapi.application.domain.user.User;
+import br.com.fiap.restauranteapi.application.domain.user.UserType;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
-    private final User user;
+    private final String userId;
+    private final String name;
+    private final String email;
+    private final String login;
+    private final String password;
+    private final CustomAddressDetails address;
+    private final UserType userType;
+    private final Boolean active;
+    private final LocalDateTime createdAt;
+    private final LocalDateTime updatedAt;
+    private final LocalDateTime deletedAt;
 
-    public CustomUserDetails(User user) {
-        this.user = user;
-    }
-
-    public User getUser() {
-        return user;
+    public CustomUserDetails(
+            String userId,
+            String name,
+            String email,
+            String login,
+            String password,
+            CustomAddressDetails address,
+            UserType userType,
+            Boolean active,
+            LocalDateTime createdAt,
+            LocalDateTime updatedAt,
+            LocalDateTime deletedAt
+    ) {
+        this.userId = userId;
+        this.name = name;
+        this.email = email;
+        this.login = login;
+        this.password = password;
+        this.address = address;
+        this.userType = userType;
+        this.active = active;
+        this.createdAt = createdAt;
+        this.updatedAt = updatedAt;
+        this.deletedAt = deletedAt;
     }
 
     public String getId() {
-        return user.getUserId().toString();
+        return this.userId;
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getUserType().name()));
+        return List.of(new SimpleGrantedAuthority("ROLE_" + this.getUserType().name()));
     }
 
     @Override
     public String getPassword() {
-        return user.getPassword();
+        return this.password;
     }
 
     @Override
     public String getUsername() {
-        return user.getLogin();
+        return this.login;
     }
 
     @Override
@@ -49,6 +78,46 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return user.getActive();
+        return this.getActive();
+    }
+
+    public String getUserId() {
+        return userId;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public String getLogin() {
+        return login;
+    }
+
+    public CustomAddressDetails getAddress() {
+        return address;
+    }
+
+    public UserType getUserType() {
+        return userType;
+    }
+
+    public Boolean getActive() {
+        return active;
+    }
+
+    public LocalDateTime getCreatedAt() {
+        return createdAt;
+    }
+
+    public LocalDateTime getUpdatedAt() {
+        return updatedAt;
+    }
+
+    public LocalDateTime getDeletedAt() {
+        return deletedAt;
     }
 }
